renamed the webpage

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 <body class="bg-gray-100">
      <!-- Add some Tailwind classes to test -->
      <div class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold text-blue-600">ML Tagger</h1>
+        <h1 class="text-2xl font-bold text-blue-600">Expana News Tagger</h1>
     </div>
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-blue-600 mb-2">ML Tagger</h1>
+            <h1 class="text-3xl font-bold text-blue-600 mb-2">Expana News Tagger 🤖</h1>
             <p class="text-gray-600">Automatically categorize news articles using AI</p>
         </header>
 
