--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="/styles/tailwind.css">
     <script src="/js/app.js" type="module" defer></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-expana-green">
      <!-- Add some Tailwind classes to test -->
      <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold text-blue-600">Expana News Tagger</h1>
     </div>
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-blue-600 mb-2">Expana News Tagger 🤖</h1>
+            <h1 class="text-3xl font-bold textmain mb-2">Expana News Tagger 🤖</h1>
             <p class="text-gray-600">Automatically categorize news articles using AI</p>
         </header>
 
